--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,6 +9,7 @@
   <script>
   motionAI_Init('23132?color=62a8ea&sendBtn=SEND&inputBox=Type+something...&token=7a286ca7f87b7308ddd48842f96e1b57',true,400,470); /* botID with access token, display bot icon?, modal width, modal height */
   /* you may also invoke motionAI_Open(); to manually open the modal */
+  motionAI_Open();
   </script>
 </body>
 </html>
